--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -31,8 +31,10 @@
         <action
             android:id="@+id/action_petDetailFragment_to_landingFragment"
             app:destination="@id/landingFragment"
+            app:enterAnim="@anim/slide_out_left"
+            app:exitAnim="@anim/slide_in_right"
             app:popUpTo="@id/landingFragment"
-            app:popUpToInclusive="true"/>
+            app:popUpToInclusive="true" />
         <argument
             android:name="travelDto"
             app:argType="com.wikilift.tfg.data.model.room.entity.PetBase" />
